# swissgeol-assets-dataextraction

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TOCExtractor.py  api.http  asset-notebook.ipynb  asset-notebook_S3.ipynb  asset_notebook.ipynb  bounding_box.py  classify_digital_page.ipynb  classify_scanned_page.ipynb  config.yml  corner_detection.ipynb  create_testdata.ipynb  detect_language.py  docker-compose.yml  extract_images.ipynb  keyword_finding.py  layoutparser.ipynb  main.py  matching_params.yml  page_classification.ipynb  pdf_type.ipynb  pyproject.toml  requirements.csv  requirements.txt  ruff.toml  setup.py  test_textline.py  text.py  utils.py
api/: api.py
config/: layoutlmv3_config.yaml  matching_params.yml  pixtral_config.yml  prediction_profile.api-stable.yaml  prediction_profile.dev-v2.yaml  randomforest_config.yml  xgboost_config.yml
data/: gt_geoquat.json  gt_reports.json  gt_single_pages.json  gt_zurich.json
language-detection/: README.md  asses-pages-from-m.py  asset-language-summary.py  compare-s3-vs-m.py  compare_pages.py  language-per-page-from-s3.py  ocrdetection.py  single-page-assets.py  small-pages-summary.py  summarize-per-file.py  title_page.py
notebooks/: asset-notebook_S3.ipynb  asset_notebook.ipynb  classify_digital_page.ipynb  classify_scanned_page.ipynb  corner_detection.ipynb  create_testdata.ipynb  extract_images.ipynb  find_documents.ipynb  layoutparser.ipynb  line_detection.ipynb  map_features_plotting.ipynb  pdf_type.ipynb
prompts/: classification_prompts.yml  layout_classification_prompt.txt
src/: TOCExtractor.py  __init__.py  bounding_box.py  classify_page.py  classify_scanned_page.py  detect_language.py  evaluation.py  geometric_objects.py  keyword_finding.py  line_detection.py  linesquadtree.py  main.py  (+12 more)
(+64 files in other folders)
